[package]
name = "registry"
version = "0.1.0"
authors = ["XtremeDevX <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
tokio = { version = "1.8.1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
indicatif = "0.16.2"
colored = "2.0.0"
anyhow = "1.0.42"
futures = "0.3.15"
semver_rs = "0.1.3"
bincode = "1.3.3"
chttp = "0.5.5"
lz4 = "1.23.2"
