[package]
name = "registry"
version = "0.1.0"
authors = ["XtremeDevX <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"] }
indicatif = "0.16.2"
colored = "2.0.0"
anyhow = "1.0.51"
futures = "0.3.19"
semver_rs = "0.2.0"
lz4 = "1.23.2"
base64 = "0.13.0"
ssri = "7.0.0"
isahc = "1.6.0"
speedy = "0.8.0"
hex = "0.4.3"
reqwest = { version = "0.11.8", features = ["rustls-tls"] }