[package]
name = "version-gen"
version = "0.1.0"
authors = ["Tejas Ravishankar <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_input = "0.4.0"
lz4 = "1.23.2"
bincode = "1.3.3"
serde = { version = "1.0.127", features = ["derive"] }
